Automation Building AWS Fargate & Deploy application 컨텐츠 보완